--- a/src/providers/locales/fr.json
+++ b/src/providers/locales/fr.json
@@ -75,6 +75,8 @@
     "close": "Fermer"
   },
   "transport": {
+    "sorry": "Désolé !",
+    "notFound": "L’itinéraire demandé n’est pas compatible avec ce mode de transport",
     "otherComparison": "Voir une autre comparison",
     "modify": "Modifier",
     "avoided": "évités",
