feat: Add language icon

--- a/src/providers/locales/en.json
+++ b/src/providers/locales/en.json
@@ -178,6 +178,7 @@
     "click-and-collect": "Click & collect",
     "trajet": "Is it on your usual route?",
     "yes": "Yes",
+    "plane": "Your order comes from far away",
     "yes-plane": "Yes (air transport)",
     "no": "No",
     "km": "To go to the pick-up point, you travel...",
