--- a/src/providers/locales/fr.json
+++ b/src/providers/locales/fr.json
@@ -178,6 +178,7 @@
     "click-and-collect": "Le click & collect",
     "trajet": "est t'il sur votre trajet habituel ?",
     "yes": "Oui",
+    "plane": "Le colis vient de loin",
     "yes-plane": "Oui (transport par avion)",
     "no": "Non",
     "km": "Pour aller au point relais, vous parcourez...",
