fix: Allow more home office

--- a/src/providers/locales/fr.json
+++ b/src/providers/locales/fr.json
@@ -107,7 +107,7 @@
       "work": "en vous déplaçant",
       "or": "SOIT",
       "economised": "d'économisé sur votre empreinte carbone annuelle",
-      "total": "THIS EQUALS.."
+      "total": "SOIT AUTANT D’ÉMISSIONS QUE..."
     },
     "distance": {
       "header": "Découvrez la quantité de CO₂e que vous émettez pour cette distance"
