--- a/src/providers/locales/en.json
+++ b/src/providers/locales/en.json
@@ -21,6 +21,9 @@
     "km": {
       "title": "Display a custom distance"
     },
+    "roundTrip": {
+      "title": "Round trip"
+    },
     "situation": "my own simulation",
     "comparateur": "my own comparison",
     "month": {
