feat: Add iframe preview

--- a/src/providers/locales/en.json
+++ b/src/providers/locales/en.json
@@ -12,6 +12,7 @@
     "apercu": "SHARING OVERVIEW",
     "share": "Share",
     "integrate": "Integrate",
+    "preview": "Preview the integration",
     "next-actions": "Explore further",
     "understand": "Understanding data",
     "download": "Download",
