--- a/src/providers/locales/fr.json
+++ b/src/providers/locales/fr.json
@@ -27,6 +27,11 @@
     },
     "situation": "ma propre simulation",
     "comparateur": "ma propre comparaison",
+    "display": {
+      "title": "Intégrer",
+      "graphic": "Le graphique",
+      "simulator": "Le simulateur"
+    },
     "language": {
       "label": "Langue",
       "fr": "Français",
