--- a/src/providers/locales/fr.json
+++ b/src/providers/locales/fr.json
@@ -12,6 +12,7 @@
     "apercu": "APERÇU DU PARTAGE",
     "share": "Partager",
     "integrate": "Intégrer",
+    "preview": "Aperçu de l'integration",
     "next-actions": "Aller plus loin",
     "understand": "Comprendre les données",
     "download": "Télécharger",
@@ -20,6 +21,9 @@
     },
     "km": {
       "title": "Afficher une distance personnalisée"
+    },
+    "roundTrip": {
+      "title": "Aller / Retour"
     },
     "situation": "ma propre simulation",
     "comparateur": "ma propre comparaison",
