--- a/src/providers/locales/fr.json
+++ b/src/providers/locales/fr.json
@@ -262,11 +262,11 @@
     "description": "En moyenne, les Français n’utilisent qu’un tiers des chaussures qu’ils possèdent. Et si on désencombrait les placards ?",
     "paire": "paire[s]",
     "new-paire": "paire[s] de chaussures neuves",
-    "avis": "🧠 À votre avis...",
+    "avis": "À votre avis...",
     "avis-description": "De combien de paires de chaussures pensez-vous avoir besoin ?",
-    "penderie": "👉 Dans vos placards",
+    "penderie": "Dans vos placards",
     "penderie-description": "Combien de paires de chaussures possédez-vous réellement ?",
-    "neuf": "✨ Vos achats récents",
+    "neuf": "Vos achats récents",
     "neuf-description": "Combien de paires de chaussures neuves avez-vous acheté cette année ?",
     "total": "SOIT AUTANT D’ÉMISSIONS QUE...",
     "waiting": "Une réponse à la question ci-dessus permet d’afficher l’impact carbone de l’achat de chaussures neuves"
