--- a/src/providers/locales/en.json
+++ b/src/providers/locales/en.json
@@ -262,11 +262,11 @@
     "description": "On average, the French use only a third of the shoes they own. What if we decluttered the closets?",
     "paire": "pair[s]",
     "new-paire": "pair[s] of new shoes",
-    "avis": "🧠 In your opinion...",
+    "avis": "In your opinion...",
     "avis-description": "How many pairs of shoes do you think you need?",
-    "penderie": "👉 In your closets",
+    "penderie": "In your closets",
     "penderie-description": "How many pairs of shoes do you actually own?",
-    "neuf": "✨ Your recent purchases",
+    "neuf": "Your recent purchases",
     "neuf-description": "How many pairs of new shoes have you bought this year?",
     "total": "THIS EQUALS..",
     "waiting": "An answer to the above question displays the carbon impact of buying new shoes."
