feat: new ressources

--- a/src/providers/locales/en.json
+++ b/src/providers/locales/en.json
@@ -406,6 +406,8 @@
     "ngc": "Estimate your consumption carbon footprint",
     "agir": "What does telecommuting change for the planet?",
     "calendar": "Seasonal fruits and vegetables calendar",
-    "livraison": "Download the guide 'E-consumer & responsible'"
+    "livraison": "Download the guide 'E-consumer & responsible'",
+    "leger": "How to work with a low impact ?",
+    "ecoresponsable": "Eco-responsible at work"
   }
 }
