--- a/src/providers/locales/es.json
+++ b/src/providers/locales/es.json
@@ -409,6 +409,8 @@
     "ngc": "Estimar tu huella de carbono de consumo",
     "agir": "¿El teletrabajo, qué cambia para el planeta?",
     "calendar": "Calendario de frutas y verduras de temporada",
-    "livraison": "Descargar la guía “E-consumidor & responsable”"
+    "livraison": "Descargar la guía “E-consumidor & responsable”",
+    "leger": "¿Cómo trabajar con bajo impacto?",
+    "ecoresponsable": "Eco-responsabilidad en el trabajo"
   }
 }
