--- a/src/providers/locales/fr.json
+++ b/src/providers/locales/fr.json
@@ -409,6 +409,8 @@
     "ngc": "Estimer son empreinte carbone de consommation",
     "agir": "Le télétravail, ça change quoi pour la planète ?",
     "calendar": "Calendrier des fruits et légumes de saison",
-    "livraison": "Télécharger le guide “E-consommateur & responsable”"
+    "livraison": "Télécharger le guide “E-consommateur & responsable”",
+    "leger": "Comment télétravailler léger ?",
+    "ecoresponsable": "Écoresponsable au bureau"
   }
 }
