--- a/src/providers/locales/es.json
+++ b/src/providers/locales/es.json
@@ -262,11 +262,11 @@
     "description": "En promedio, los franceses solo usan un tercio de los zapatos que poseen. ¿Y si despejamos los armarios?",
     "paire": "par(s)",
     "new-paire": "par(s) de zapatos nuevos",
-    "avis": "🧠 Según tú...",
+    "avis": "Según tú...",
     "avis-description": "¿Cuántos pares de zapatos crees que necesitas?",
-    "penderie": "👉 En tus armarios",
+    "penderie": "En tus armarios",
     "penderie-description": "¿Cuántos pares de zapatos tienes realmente?",
-    "neuf": "✨ Tus compras recientes",
+    "neuf": "Tus compras recientes",
     "neuf-description": "¿Cuántos pares de zapatos nuevos has comprado este año?",
     "total": "LO QUE CORRESPONDE A...",
     "waiting": "La respuesta a la pregunta anterior mostrará el impacto en carbono de la compra de zapatos nuevos"
